--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,19 +1,51 @@
 {
     "name": "devcontainer-python",
-    "build": {
-        "dockerfile": "Dockerfile"
-    },
-    "containerEnv": {
-      "TZ": "Asia/Tokyo"
-    },
-    "runArgs": ["--init"],
+    "dockerComposeFile": "docker-compose.yml", 
+    "service": "dev",
+    "remoteUser": "vscode", //devcontainer内のターミナルやタスクなどの実行するユーザを指定
+    
+    "features": {
+		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {}
+	},
+    "workspaceFolder": "/workspace", //ホスト側のワークスペースのパスを指定
+    
     "customizations": {
         "vscode": {
-            "extensions": [
+            "extensions": [ //vscodeの拡張機能を追加
                 "ms-python.python",
                 "charliermarsh.ruff",
-                ""
-            ]
+                "esbenp.prettier-vscode",
+                "task.vscode-task",
+                "ms-azuretools.vscode-docker",
+                "p1c2u.docker-compose"
+            ],
+            "settings": {
+                "[python]":{ //python拡張機能の設定
+                    "editor.formatOnSave": true, //保存時にフォーマット
+                    "editor.codeActionsOnSave": {
+                    "source.organizeImports.ruff": "explicit",
+                    "source.fixAll.ruff": "explicit"
+                    },
+                    "editor.defaultFormatter": "charliermarsh.ruff" //エディタのデフォルトフォーマッタを指定
+                },
+                "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
+            
+                "ruff.path": [
+                    "${workspaceFolder}/.venv/bin/ruff"
+                ], // 仮想環境の Ruff を使用
+
+                "python.analysis.autoImportCompletions": true,
+                "python.analysis.completeFunctionParens": true,
+                "python.analysis.extraPaths": [
+                    "${workspaceFolder}/.venv/lib/python3.12/site-packages",
+                    "${workspaceFolder}/src"
+                ],
+                "python.autoComplete.extraPaths": [
+                    "${workspaceFolder}/.venv/lib/python3.12/site-packages",
+                    "${workspaceFolder}/src"
+                ]
+            }
         }
-    }
+    },
+    "postStartCommand": "uv venv && uv sync"
 }
