--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -15,7 +15,10 @@ RUN curl -LsSf https://taskfile.dev/install.sh | sh -s -- -b /usr/local/bin && \
 RUN curl -SL "https://github.com/docker/compose/releases/latest/download/docker-compose-linux-x86_64" -o /usr/local/bin/docker-compose && \
     chmod +x /usr/local/bin/docker-compose
 
-# devcontainer環境にmise（バージョン管理ツール）をインストール
+# mise（バージョン管理ツール）をインストール
 RUN curl -fsSL https://mise.run | sh && \
-ln -s ~/.local/bin/mise /usr/local/bin/mise && \
-mise --version
+    ln -s /root/.local/bin/mise /usr/local/bin/mise && \
+    mise --version
+
+# PATH を適切に設定
+ENV PATH="/root/.local/bin:${PATH}"
