--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -7,10 +7,10 @@ services:
       dockerfile: Dockerfile
     container_name: devcontainer
     privileged: true
-    volumes:
+    volumes:   # Dockerコンテナ内でDockerコンテナを操作するために必要
       - ..:/workspace:cached
       - /var/run/docker.sock:/var/run/docker.sock
-    command: sleep infinity
-    stdin_open: true
+    command: sleep infinity 
+    stdin_open: true   # コンテナをバックグラウンドで永続的に実行させる
     tty: true
-    init: true
+    init: true   #適切なプロセス管理を行うためにinitプロセスを使用する
